@@ -1,4 +1,4 @@
-## $Id: eptex.am 55874 2020-07-19 15:42:51Z karl $
+## $Id: eptex.am 57726 2021-02-13 09:45:37Z kakuto $
 ## texk/web2c/eptexdir/am/eptex.am: Makefile fragment for e-pTeX.
 ##
 ## Copyright 2015-2020 Karl Berry <tex-live@tug.org>
@@ -54,6 +54,7 @@ eptex_web_srcs = \
 	etexdir/etex.ch \
 	etexdir/tex.ch0 \
 	tex.ch \
+	tracingstacklevels.ch \
 	zlib-fmt.ch \
 	etexdir/tex.ech
 
